create template views